Implemented RPN and RoI, created fast RCNN components

--- a/code/pose.ipynb
+++ b/code/pose.ipynb
@@ -231,7 +231,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "class VGGFeatureExtractor(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(VGGFeatureExtractor, self).__init__()\n",
+    "        vgg = models.vgg16(pretrained=True)\n",
+    "        self.features = nn.Sequential(*list(vgg.features.children())[:-1])\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.features(x)\n"
    ]
   },
   {
@@ -239,14 +246,166 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torchvision\n",
+    "\n",
+    "class RegionProposalNetwork(nn.Module):\n",
+    "    def __init__(self, in_channels=512, mid_channels=512, num_anchors=9):\n",
+    "        super(RegionProposalNetwork, self).__init__()\n",
+    "        self.conv = nn.Conv2d(in_channels, mid_channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.reg_layer = nn.Conv2d(mid_channels, 4 * num_anchors, kernel_size=1, stride=1, padding=0)\n",
+    "        self.cls_layer = nn.Conv2d(mid_channels, 2 * num_anchors, kernel_size=1, stride=1, padding=0)\n",
+    "\n",
+    "        self.reg_layer.weight.data.normal_(0, 0.01)\n",
+    "        self.reg_layer.bias.data.zero_()\n",
+    "        self.cls_layer.weight.data.normal_(0, 0.01)\n",
+    "        self.cls_layer.bias.data.zero_()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.conv(x))\n",
+    "\n",
+    "        reg_out = self.reg_layer(x)\n",
+    "        cls_out = self.cls_layer(x)\n",
+    "\n",
+    "        reg_out = reg_out.permute(0, 2, 3, 1).contiguous().view(x.size(0), -1, 4)\n",
+    "        cls_out = cls_out.permute(0, 2, 3, 1).contiguous().view(x.size(0), -1, 2)\n",
+    "\n",
+    "        return reg_out, cls_out"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def apply_regression_deltas(anchors, deltas):\n",
+    "    \"\"\"regression deltas to anchors,to adjust their coordinates\n",
+    "Parameters-(tensors)\n",
+    "        anchors: in the format (x1,y1, x2, y2),shape (N, num_anchors, 4).\n",
+    "        deltas:for adjusting anchors, shape (N, num_anchors * 4).\n",
+    "          Returns-\n",
+    "        adjusted_anchors:adjusted anchor boxesshape (N, num_anchors, 4).\n",
+    "    \"\"\"\n",
+    "    deltas = deltas.view(anchors.size(0), anchors.size(1), 4, -1)\n",
+    "\n",
+    "    widths = anchors[:, :, :, 2] - anchors[:, :, :, 0]\n",
+    "    heights = anchors[:, :, :, 3] - anchors[:, :, :, 1]\n",
+    "    center_x = anchors[:, :, :, 0] + 0.5 * widths\n",
+    "    center_y = anchors[:, :, :, 1] + 0.5 * heights\n",
+    "\n",
+    "    delta_x = deltas[:, :, :, 0]  \n",
+    "    delta_y = deltas[:, :, :, 1]  \n",
+    "    delta_width = deltas[:, :, :, 2]  \n",
+    "    delta_height = deltas[:, :, :, 3]  \n",
+    "\n",
+    "    adjusted_center_x = delta_x * widths[:, :, :, None] + center_x[:, :, :, None]\n",
+    "    adjusted_center_y = delta_y * heights[:, :, :, None] + center_y[:, :, :, None]\n",
+    "    adjusted_width = torch.exp(delta_width) * widths[:, :, :, None]\n",
+    "    adjusted_height = torch.exp(delta_height) * heights[:, :, :, None]\n",
+    "\n",
+    "    adjusted_x1 = adjusted_center_x - 0.5 * adjusted_width\n",
+    "    adjusted_y1 = adjusted_center_y - 0.5 * adjusted_height\n",
+    "    adjusted_x2 = adjusted_center_x + 0.5 * adjusted_width\n",
+    "    adjusted_y2 = adjusted_center_y + 0.5 * adjusted_height\n",
+    "\n",
+    "    adjusted_anchors = torch.stack((adjusted_x1, adjusted_y1, adjusted_x2, adjusted_y2), dim=3)\n",
+    "\n",
+    "    return adjusted_anchors\n",
+    "\n",
+    "def non_max_suppression(boxes, scores, threshold):\n",
+    "    selected_indices = torchvision.ops.nms(boxes.view(-1, 4), scores, threshold)\n",
+    "    return selected_indices\n",
+    "\n",
+    "def generate_rois(rpn_reg_op, rpn_cls_op, anchors, nms_threshold=0.7, num_rois=1000):\n",
+    "    print(\"RPN Reg output shape:\", rpn_reg_op.shape)\n",
+    "    print(\"RPN Cls output shape:\", rpn_cls_op.shape)\n",
+    "    print(\"Anchors shape:\", anchors.shape)\n",
+    "\n",
+    "    adjusted_anchors = []\n",
+    "\n",
+    "    for i in range(anchors.size(1)):\n",
+    "        adjusted_anchor = apply_regression_deltas(anchors[:, i, :, :].view(anchors.size(0), 1, -1, 4),\n",
+    "                                                  rpn_reg_op[:, i * 4: (i + 1) * 4, :, :].view(anchors.size(0), -1))\n",
+    "        adjusted_anchors.append(adjusted_anchor)\n",
+    "\n",
+    "    adjusted_anchors = torch.cat(adjusted_anchors, dim=1)\n",
+    "    adjusted_anchors_2d = adjusted_anchors.view(-1, 4)\n",
+    "    rpn_cls_scores = rpn_cls_op[:, 1].view(-1)  # Assuming positive class index is 1\n",
+    "    num_elements = min(adjusted_anchors_2d.size(0), rpn_cls_scores.size(0))\n",
+    "    keep_indices = torchvision.ops.nms(adjusted_anchors_2d[:num_elements], rpn_cls_scores[:num_elements], nms_threshold)\n",
+    "    \n",
+    "    top_indices = keep_indices[:num_rois]\n",
+    "    rois = adjusted_anchors_2d[top_indices]\n",
+    "    rois_scores = rpn_cls_scores[top_indices]\n",
+    "\n",
+    "    return rois, rois_scores\n",
+    "batch_size = 1\n",
+    "num_anchors = 9\n",
+    "height = 64\n",
+    "width = 64\n",
+    "\n",
+    "rpn_reg_op = torch.rand((batch_size, num_anchors * 4, height, width))\n",
+    "rpn_cls_op = torch.rand((batch_size, num_anchors * 2, height, width))\n",
+    "anchors = torch.rand((batch_size, num_anchors, height, width, 4))  \n",
+    "\n",
+    "rois, rois_scores = generate_rois(rpn_reg_op, rpn_cls_op, anchors, nms_threshold=0.7, num_rois=1000)\n",
+    "\n",
+    "print(\"RoIs shape:\", rois.shape)\n",
+    "print(\"RoIs Scores shape:\", rois_scores.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FastRCNNDetector(nn.Module):\n",
+    "    def __init__(self, num_classes, num_anchors):\n",
+    "        super(FastRCNNDetector, self).__init__()\n",
+    "        self.num_classes = num_classes\n",
+    "        self.num_anchors = num_anchors\n",
+    "\n",
+    "        \n",
+    "        self.roi_pooling = nn.AdaptiveMaxPool2d((7, 7))\n",
+    "        self.fc1 = nn.Linear(512 * 7 * 7, 4096)\n",
+    "        self.fc2 = nn.Linear(4096, 4096)\n",
+    "\n",
+    "        self.cls_layer = nn.Linear(4096, num_classes)\n",
+    "\n",
+    "        self.reg_layer = nn.Linear(4096, 4 * num_anchors)\n",
+    "\n",
+    "        self.fc1.weight.data.normal_(0, 0.01)\n",
+    "        self.fc1.bias.data.zero_()\n",
+    "        self.fc2.weight.data.normal_(0, 0.01)\n",
+    "        self.fc2.bias.data.zero_()\n",
+    "        self.cls_layer.weight.data.normal_(0, 0.01)\n",
+    "        self.cls_layer.bias.data.zero_()\n",
+    "        self.reg_layer.weight.data.normal_(0, 0.01)\n",
+    "        self.reg_layer.bias.data.zero_()\n",
+    "\n",
+    "    def forward(self, x, rpn_output):\n",
+    "       \n",
+    "        rpn_reg, rpn_cls = rpn_output\n",
+    "\n",
+    "        #RoI pooling to the feature maps using the region proposals\n",
+    "        rois = generate_rois(rpn_reg, rpn_cls)  \n",
+    "        pooled_features = self.roi_pooling(x, rois)\n",
+    "\n",
+    "        flattened_features = pooled_features.view(pooled_features.size(0), -1)\n",
+    "\n",
+    "        #Fast R-CNN head:FC ->ReLU ->FC ->  ReLU\n",
+    "        fc1_output = F.relu(self.fc1(flattened_features))\n",
+    "        fc2_output = F.relu(self.fc2(fc1_output))\n",
+    "\n",
+    "        cls_output = self.cls_layer(fc2_output)\n",
+    "\n",
+    "        reg_output = self.reg_layer(fc2_output)\n",
+    "\n",
+    "        return cls_output, reg_output, rois\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
