--- a/code/pose.ipynb
+++ b/code/pose.ipynb
@@ -100,6 +100,10 @@
     "        img = self.ochuman.visImg(self.img_dir, img_id)\n",
     "        img = self.ochuman.visImg(self.img_dir, img_id)\n",
     "        img = cv2.resize(img, (256, 256))\n",
+    "\n",
+    "        if self.transform_params:\n",
+    "            img = self.apply_affine_transform(img)\n",
+    "            \n",
     "        img = img.transpose((2, 0, 1))\n",
     "        img = torch.from_numpy(img)\n",
     "        img = img.float()\n",
